--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -3,44 +3,42 @@ name: Nightly Snapshot of Release Download Statistics
 on:
   schedule:
     - cron: '0 1 * * *'  # Runs every day at 1:00 AM UTC
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
- 
 
 jobs:
   collect-stats:
     runs-on: ubuntu-latest
 
     steps:
+    # 1. Checkout the release-stats branch
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        ref: release-stats  # Specify the branch to check out
 
+    # 2. Set up Python environment
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
 
+    # 3. Install required Python dependencies
     - name: Install dependencies
       run: |
         pip install requests pandas
 
+    # 4. Run the Python script to fetch and append download stats
     - name: Run Python script to fetch and append download stats
       run: python .github/scripts/fetch_and_append_stats.py
 
-    - name: Commit changes
+    # 5. Configure Git for committing
+    - name: Configure Git
       run: |
         git config --local user.email "your-email@example.com"
         git config --local user.name "github-actions[bot]"
+
+    # 6. Commit and push the changes back to the release-stats branch
+    - name: Commit changes
+      run: |
         git add release_stats.csv
         git commit -m "Add nightly snapshot for $(date +'%Y-%m-%d %H:%M:%S')"
-        git push
-
+        git push origin release-stats
