--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -33,17 +33,22 @@ jobs:
     # 5. Configure Git for committing
     - name: Configure Git
       run: |
-        git config --local user.email "your-email@example.com"
-        git config --local user.name "github-actions[bot]"
+        git config --local user.email "mitja.sailer@sap.com"
+        git config --local user.name "nice2mitja"
 
-    # 6. Pull the latest changes from the remote branch
-    - name: Pull latest changes
+    # 6. Fetch the latest changes from the remote branch
+    - name: Fetch latest changes
       run: |
-        git pull origin release-stats
+        git fetch origin release-stats
 
-    # 7. Commit and push the changes back to the release-stats branch
+    # 7. Attempt to merge the latest changes
+    - name: Merge latest changes
+      run: |
+        git merge origin/release-stats --strategy-option=theirs || echo "Merge conflicts detected"
+
+    # 8. Commit and push the changes back to the release-stats branch
     - name: Commit changes
       run: |
         git add release_stats.csv
-        git commit -m "Add nightly snapshot for $(date +'%Y-%m-%d %H:%M:%S')"
+        git commit -m "Add nightly snapshot for $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
         git push origin release-stats
