--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -41,10 +41,10 @@ jobs:
       run: |
         git fetch origin release-stats
 
-    # 7. Attempt to merge the latest changes
-    - name: Merge latest changes
+    # 7. Rebase the latest changes
+    - name: Rebase changes
       run: |
-        git merge origin/release-stats --strategy-option=theirs || echo "Merge conflicts detected"
+        git rebase origin/release-stats || { echo "Rebase failed, resolving conflicts"; exit 1; }
 
     # 8. Commit and push the changes back to the release-stats branch
     - name: Commit changes
