--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -51,4 +51,4 @@ jobs:
       run: |
         git add release_stats.csv
         git commit -m "Add nightly snapshot for $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-        git push origin release-stats
+        git push -f origin release-stats
