--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -3,6 +3,18 @@ name: Nightly Snapshot of Release Download Statistics
 on:
   schedule:
     - cron: '0 1 * * *'  # Runs every day at 1:00 AM UTC
+workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+
 
 jobs:
   collect-stats:
