--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -13,7 +13,6 @@ on:
         - warning
         - debug
 
-
 jobs:
   collect-stats:
     runs-on: ubuntu-latest
@@ -43,22 +42,29 @@ jobs:
     # 5. Configure Git for committing
     - name: Configure Git
       run: |
-        git config --local user.email "mitja.sailer@sap.com"
-        git config --local user.name "nice2mitja"
+        git config --local user.email "your-email@example.com"
+        git config --local user.name "github-actions[bot]"
 
-    # 6. Fetch the latest changes from the remote branch
-    - name: Fetch latest changes
+    # 6. Stash any changes before rebase
+    - name: Stash changes
+      run: |
+        git add .
+        git stash
+
+    # 7. Fetch the latest changes and rebase
+    - name: Fetch and rebase
       run: |
         git fetch origin release-stats
-
-    # 7. Rebase the latest changes
-    - name: Rebase changes
-      run: |
         git rebase origin/release-stats || { echo "Rebase failed, resolving conflicts"; exit 1; }
 
-    # 8. Commit and push the changes back to the release-stats branch
-    - name: Commit changes
+    # 8. Apply stashed changes after rebase
+    - name: Apply stashed changes
+      run: |
+        git stash pop || { echo "No stashed changes to apply"; }
+
+    # 9. Commit and push the changes back to the release-stats branch
+    - name: Commit and push changes
       run: |
         git add release_stats.csv
         git commit -m "Add nightly snapshot for $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-        git push -f origin release-stats
+        git push origin release-stats || { echo "Push failed, please check the logs"; exit 1; }
