--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -1,17 +1,8 @@
 name: Nightly Snapshot of Release Download Statistics
 
 on:
- workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
+  schedule:
+    - cron: '*/5 * * * *'
 
 jobs:
   collect-stats:
