--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -2,7 +2,7 @@ name: Nightly Snapshot of Release Download Statistics
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 1 * * *'  # Runs every day at 1:00 AM UTC
 
 jobs:
   collect-stats:
