--- a/.github/workflows/nightly-snapshot.yml
+++ b/.github/workflows/nightly-snapshot.yml
@@ -2,7 +2,8 @@ name: Nightly Snapshot of Release Download Statistics
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # Runs every day at 1:00 AM UTC
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   collect-stats:
@@ -33,8 +34,8 @@ jobs:
     # 5. Configure Git for committing
     - name: Configure Git
       run: |
-        git config --local user.email "your-email@example.com"
-        git config --local user.name "github-actions[bot]"
+        git config --local user.email "sapmachine@sap.com"
+        git config --local user.name "SapMachine Github Actions Bot"
 
     # 6. Stash any changes before rebase
     - name: Stash changes
